manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-backend
  namespace: app
  labels:
    app: python-backend
spec:
  type: ClusterIP
  selector:
    app: python-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
