manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-backend
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: app.student91.devops8.test-danit.com
spec:
  ingressClassName: nginx
  rules:
    - host: app.student91.devops8.test-danit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-backend
                port:
                  number: 80
